--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,15 @@ nav ul li{
     z-index: 999;
 }
 
+.navbar_home {
+    position: fixed;
+    top: 0;
+    /* background-color: #ffffff; */
+    width: 100%;
+    height: 60px;
+    z-index: 999;
+}
+
 a {
     text-decoration: none;
     color: #000000;
@@ -131,4 +140,64 @@ p {
     min-width: 100%;
     min-height: 100%;
     top: -500px;
+    opacity: 30%;
 }
+
+.intro {
+    position: relative;
+    font-size: 60px;
+    margin-top: 200px;
+    margin-left: 300px;
+    margin-bottom: 0px;
+    color: #000000;
+    /* border: #000000 solid 2px; */
+}
+
+.intro_content {
+    font-family: 'Shadows Into Light', 'Arvo', 'Noto Sans';
+    position: relative;
+    font-size: 36px;
+    margin-left: 550px;
+    color: #000000;
+}
+
+#kendama_history {
+    position: relative;
+    font-family: 'Nunito', 'Arvo';
+    top: 200px;
+    height: 500px;
+    background-color: #ffffff;
+}
+
+h2 {
+    font-size: 30px;
+    padding-top: 50px;
+    padding: 50px 60px;
+}
+
+#history_detail {
+    font-size: 18px;
+    padding: 0px 60px;
+}
+
+
+
+
+
+@media screen and (prefers-reduced-motion: reduce){
+    /*Turn off scroll*/
+    html{
+      scroll-behavior: auto; /* Removes scroll animation */
+    }
+  
+    /*Turn off transition*/
+    a.skip {
+      -webkit-transition: initial; /* sets to default setting */
+      transition: initial; /* sets to default setting */
+    }
+  
+    /*Turn off parallax*/
+    .intro{
+      background-attachment: initial;
+    }
+  }
