--- a/css/style.css
+++ b/css/style.css
@@ -456,11 +456,10 @@ html, body {
     padding-top: 20px;
 }
 
-body {
-    padding: 0;
-    margin-top: 150px;
-    background: #000000;
+.music-body {
     font-family: "Roboto", sans-serif;
+    margin-top: 150px;
+    background-color: #000000;
 }
 .container {
     width: 100vw;
